test: update navigation wait strategy in e2e tests for improved reliability (#175)
* test: update navigation wait strategy in e2e tests for improved reliability

* Modified page.goto calls in e2e tests to include { waitUntil: commit } for better synchronization during navigation.
* Ensured consistent handling of URL assertions across various test cases, enhancing overall test stability.

* docs: add Star History section to README for enhanced visibility of repository popularity

* feat:set default timezone to Europe/Warsaw in Playwright config for consistent date handling across environments + enhance e2e workflow to include duration output for better performance tracking

* Added duration output for Playwright tests to the GitHub Actions workflow, allowing for better monitoring of test execution times.
* Updated test result messages to indicate slow performance based on duration thresholds, improving visibility into test efficiency.

* fix: enhance e2e tests for URL assertions and toast visibility

* Removed redundant duration output in GitHub Actions workflow for Playwright tests.
* Updated URL assertions in the Generate Invoice Link and Stripe Invoice Sharing Logic tests for improved reliability.
* Added visibility checks for toast notifications after generating invoice links to ensure proper user feedback.

* fix: improve toast messages for invoice sharing and enhance user experience

* Updated success toast messages for generating and sharing invoice links to provide clearer user guidance.
* Added a timeout for dismissing toasts to improve user feedback and prevent clutter.
* Enhanced the clipboard copy toast message for better clarity on user actions.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -101,7 +101,7 @@ jobs:
 
             Result: ${{ steps.playwright.outcome == 'success' && '✅ Passed' || '❌ Failed' }}
             Playwright Browser Binaries Installation Time: ${{ steps.playwright-install.outputs.duration_formatted }}
-            ${{ steps.playwright.outcome == 'success' && format('Playwright Tests Duration: {0}', steps.playwright.outputs.duration_formatted) }}
+            ${{ steps.playwright.outputs.duration_formatted && format('Playwright Tests Duration: {0}', steps.playwright.outputs.duration_formatted) || '' }}
 
             For more details, please check:
             - GitHub Actions run: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
