chore: add timezone logging to Playwright config and set environment variable in e2e workflow
* Added a console log in Playwright configuration to display the current timezone being used.
* Configured the e2e GitHub Actions workflow to set the timezone to Europe/Warsaw for consistent date handling across local and CI environments.

--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -11,6 +11,8 @@ jobs:
     timeout-minutes: 35
     # we use macos-latest because I am using mac os locally and generating snapshots (screenshots) for the PDF tests locally, so we need to use the same OS on the CI. https://docs.github.com/en/actions/how-tos/write-workflows/choose-where-workflows-run/choose-the-runner-for-a-job#choosing-github-hosted-runners
     runs-on: macos-latest
+    env:
+      TZ: Europe/Warsaw # we use Europe/Warsaw timezone for consistent date handling across local machines and CI
     steps:
       - run: |
           echo "Environment URL - ${{ github.event_name == 'deployment_status' && github.event.deployment_status.environment_url }}"
